--- a/test.html
+++ b/test.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>FB M Tool-Dashboard</title>
     <style>
+        /* Styling Monitor */
+
         #monitor {
             width: 100%;
             height: 100%;
@@ -98,19 +100,9 @@
 
         #cdd .front,
         #cdd .back {
-            /* position: absolute; */
             backface-visibility: hidden;
-            /* top:auto; */
-            /* display: flex;
-            justify-content: center;
-            align-items: center; */
         }
 
-        /* Styling for the front face */
-        /* #cdd .front {
-            height: 100%;
-            transition: transform 0.3s ease;
-        } */
 
 
         #cdd .back {
@@ -118,11 +110,6 @@
             transform: rotateY(180deg);
             width: 100%;
             height: 100%;
-            color: #3D3D3D;
-            /* flex-direction: column;
-            align-items: center;
-            padding: 1rem;
-            text-align: center; */
         }
 
         #cdd .back button {
@@ -143,7 +130,7 @@
     <div class="flex flex-wrap place-content-center bg-gray-300 min-h-screen">
         <div class="grid grid-cols-1 place-content-center gap-4 md:grid-cols-2 max-w-full min-h-screen">
             <!-- card monitor -->
-            <div class="p-4 max-w-xl sm:h-[45vh] h-[70vh] bg-100">
+            <div class="p-4 max-w-xl sm:h-[45vh] h-[65vh] bg-100">
                 <a href="https://monitor.ioer.de/?language=en" target="_blank" rel="noreferrer noopener">
                     <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col" id="monitor">
                         <div class="logo flex items-center sm:left-1 left-0.5">
@@ -171,10 +158,11 @@
             </div>
 
             <!-- card CDD -->
-            <div class="p-4 max-w-xl sm:h-[45vh] h-[70vh]">
-                <a href="https://colouring.dresden.ioer.de/" target="_blank" rel="noreferrer noopener" id="cdd">
-                    <div class="relative rounded-lg h-full bg-zinc-100 place-content-center">
-                        <div class="flex flex-col md:flex-row gap-4 items-center justify-center absolute inset-0 p-8 front">
+            <div class="p-4 max-w-xl sm:h-[45vh] h-[50vh]">
+                <a href="https://colouring.dresden.ioer.de/" target="_blank" rel="noreferrer noopener">
+                    <div class="relative rounded-lg h-full bg-zinc-100 place-content-center" id="cdd">
+                        <div
+                            class="flex flex-col md:flex-row gap-4 items-center justify-center absolute inset-0 p-8 front">
                             <img src="logos/CDD_Logo.png" class="max-w-[60%] md:max-w-[40%]"
                                 alt="Colouring Dresden Logo">
                             <div class="flex flex-col justify-between flex-grow">
@@ -190,8 +178,15 @@
                             </div>
                         </div>
 
-                        <div class="back">
-                            <button>&#8594 To the Web Application (in German)</button>
+                        <div class="back inline-flex items-center justify-center">
+
+                            <button
+                                class="bg-white text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow inline-flex gap-2 items-center">
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                </svg>
+                                <span> To the Web Application (in German)</span></button>
                         </div>
 
                     </div>
