--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="p-4 max-w-xl sm:h-[40vh] h-[65vh] bg-100">
                 <a href="https://monitor.ioer.de/?language=en" target="_blank" rel="noreferrer noopener">
                     <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col" id="monitor">
-                        <div class="logo flex items-center sm:left-1 left-0.5">
+                        <div class="logo flex items-center justify-center inset-0">
                             <object data="logos/IÖR-Monitor_Logo_h100px_farbig_transparent.svg"></object>
                         </div>
                         <div class="back-txt">
@@ -269,33 +269,15 @@
             </div>
 
             <!-- card 3 -->
-            <div class="p-4 max-w-xl">
-                <div class="flex rounded-lg h-full dark:bg-gray-800 bg-teal-400 p-8 flex-col">
-                    <div class="flex items-center mb-3">
-                        <div
-                            class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full dark:bg-indigo-500 bg-indigo-500 text-white flex-shrink-0">
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-                            </svg>
+            <div class="p-4 max-w-xl sm:h-[40vh] bg-100 hover:scale-110 transition-transform">
+                <a href="https://www.klips-projekt.de/" target="_blank" rel="noreferrer noopener">
+                    <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col " id="klips">
+                        <div class="logo flex justify-center">
+                            <img src="logos/SAG_KLIPS-Logo_Jan21.png" alt="KLIPS Logo" class="max-w-[80%]">
                         </div>
-                        <h2 class="text-white dark:text-white text-lg font-medium">Feature 3</h2>
                     </div>
-                    <div class="flex flex-col justify-between flex-grow">
-                        <p class="leading-relaxed text-base text-white dark:text-gray-300">
-                            Lorem ipsum dolor sit amet. In quos laboriosam non neque eveniet 33 nihil molestias. Rem
-                            perspiciatis iure ut laborum inventore et maxime amet.
-                        </p>
-                        <a href="#"
-                            class="mt-3 text-black dark:text-white hover:text-blue-600 inline-flex items-center">Learn
-                            More
-                            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
-                                <path d="M5 12h14M12 5l7 7-7 7"></path>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
+                </a>
+
             </div>
 
         </div>
