added QR code for mobile users

--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
                 <a href="https://monitor.ioer.de/?language=en" target="_blank" rel="noreferrer noopener">
                     <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col" id="monitor">
                         <div class="logo flex items-center justify-center inset-0">
-                            <object data="logos/IÖR-Monitor_Logo_h100px_farbig_transparent.svg"></object>
-                        </div>
+                            <img src="logos/IÖR-Monitor_Logo_h100px_farbig_transparent.svg" alt="IÖR Monitor Logo">                        </div>
                         <div class="back-txt">
                             <div class="content flex flex-col justify-between flex-grow ">
                                 <p class="leading-normal text-sm text-zinc-700">
@@ -281,6 +280,11 @@
             </div>
 
         </div>
+        <div class="fixed bottom-4 right-4 text-center flex items-end space-x-2 collapse md:visible">
+            <p class="text-sm mb-2">To check it on your phone</p>
+            <img src="img/qr-code.svg" alt="QR Code" class="w-24">
+        </div>
+
 </body>
 
 </html>
