--- a/index.html
+++ b/index.html
@@ -59,24 +59,28 @@
             bottom: 0;
         }
 
-        #monitor.hover-active:hover {
+        #monitor.hover-active:hover,
+        #monitor.click-active {
             min-height: max-content;
         }
 
-        #monitor.hover-active:hover .back-txt {
+        #monitor.hover-active:hover .back-txt,
+        #monitor.click-active .back-txt {
             top: 0%;
             overflow: auto;
             transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s;
         }
 
-        #monitor.hover-active:hover .content {
+        #monitor.hover-active:hover .content,
+        #monitor.click-active .content {
             top: 15%;
             bottom: 0;
             padding: 2rem;
             transition: all 0.5s ease-in-out, z-index 0.5s ease-in-out 0.1s;
         }
 
-        #monitor.hover-active:hover .logo {
+        #monitor.hover-active:hover .logo,
+        #monitor.click-active .logo {
             width: 40%;
             height: 30%;
             min-width: 180px;
@@ -90,11 +94,12 @@
         #cdd {
             perspective: 1000px;
             transform-style: preserve-3d;
-            transition: transform 0.6s ease;
+            transition: transform 500ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
         }
 
 
-        #cdd.hover-active:hover {
+        #cdd.hover-active:hover,
+        #cdd.click-active {
             transform: rotateY(180deg);
         }
 
@@ -104,8 +109,6 @@
             width: 100%;
             height: 100%;
         }
-
-
 
         #cdd .back {
             background: linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)), url("img/CDD_ui.png") center/cover no-repeat;
@@ -117,11 +120,12 @@
         #goat {
             /* perspective: 1000px;  */
             transform-style: preserve-3d;
-            transition: transform 350ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
+            transition: transform 500ms cubic-bezier(0.390, 0.575, 0.565, 1.000);
         }
 
 
-        #goat.hover-active:hover {
+        #goat.hover-active:hover,
+        #goat.click-active {
             transform: translateZ(-160px) rotateY(-90deg);
         }
 
@@ -141,13 +145,16 @@
             transform: rotateY(90deg) translateZ(160px);
             width: 100%;
             height: 100%;
-        }
-
-        #goat.hover-active:hover .front {
             opacity: 0;
         }
 
-        #goat.hover-active:hover .back {
+        #goat.hover-active:hover .front,
+        #goat.click-active .front {
+            opacity: 0;
+        }
+
+        #goat.hover-active:hover .back,
+        #goat.click-active .back {
             opacity: 1;
 
         }
@@ -161,26 +168,24 @@
 
         /* styling klips */
         #klips.hover-active:hover,
-        #klips.clicked {
+        #klips.click-active {
             scale: 1.1;
-            transform: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
-            transition-duration: 150ms;
         }
     </style>
 
 </head>
 
 <body>
-    <div class="flex flex-wrap place-content-center max-w-full bg-stone-300 min-h-screen">
+    <div class="flex flex-wrap place-content-center bg-stone-300 min-h-screen">
         <div class="grid grid-cols-1 place-content-center gap-8 md:grid-cols-2 max-w-full min-h-screen">
             <!-- card monitor -->
-            <div class="p-4 max-w-full sm:h-[40vh] h-[65vh] bg-100">
+            <div class="p-4 max-w-xl sm:h-[40vh] h-[65vh] bg-100">
                 <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col hover-active" id="monitor">
                     <div class="logo flex items-center justify-center inset-0">
                         <img src="logos/IÖR-Monitor_Logo_h100px_farbig_transparent.svg" alt="IÖR Monitor Logo">
                     </div>
                     <a href="https://monitor.ioer.de/?language=en" target="_blank" rel="noreferrer noopener">
-                        <div class="back-txt">
+                        <div class="back-txt rounded-lg">
                             <div class="content flex flex-col justify-between flex-grow ">
                                 <p class="leading-normal text-sm text-zinc-700">
                                     This expert information system is intended to assist scientists, administrators,
@@ -202,7 +207,7 @@
             </div>
 
             <!-- card CDD -->
-            <div class="p-4  max-w-full sm:h-[40vh] h-[50vh]">
+            <div class="p-4 max-w-xl sm:h-[40vh] h-[50vh]">
                 <div class="relative rounded-lg h-full bg-zinc-100 place-content-center hover-active" id="cdd">
                     <div class="flex flex-col md:flex-row gap-4 items-center justify-center absolute inset-0 p-8 front">
                         <img src="logos/CDD_Logo.png" class="max-w-[60%] md:max-w-[40%]" alt="Colouring Dresden Logo">
@@ -219,7 +224,7 @@
                         </div>
                     </div>
 
-                    <a class="back inline-flex items-center justify-center" href="https://colouring.dresden.ioer.de/"
+                    <a class="back inline-flex items-center justify-center rounded-lg transition-all" href="https://colouring.dresden.ioer.de/"
                         target="_blank" rel="noreferrer noopener">
                         <div>
                             <button
@@ -253,7 +258,7 @@
                     <a class="flex bg-zinc-100 rounded-bl-3xl rounded-r-2xl justify-center absolute inset-0 p-8 back"
                         href="https://goat.plan4better.de/" target="_blank" rel="noreferrer noopener">
                         <div
-                            class="flex flex-col md:flex-row gap-4 items-center rounded-bl-3xl rounded-r-2xl justify-center absolute inset-0 p-8 ">
+                            class="flex flex-col md:flex-row gap-4 items-center rounded-bl-3xl rounded-r-2xl justify-center absolute inset-0 p-8">
                             <ul class="text-sm list-disc">
                                 <li>
                                     WebGIS-Platform for sustainable spatial and transportation planning
@@ -275,9 +280,10 @@
                 </div>
             </div>
 
-            <!-- card 4 -->
-            <div class="p-4 max-w-xl sm:h-[40vh] bg-100 hover-active" id="klips">
+            <!-- card klips -->
+            <div class="p-4 max-w-xl sm:h-[40vh] bg-100 hover-active transition-all	" id="klips">
                 <a href="https://www.klips-projekt.de/" target="_blank" rel="noreferrer noopener">
+
                     <div class="flex rounded-lg h-full bg-zinc-100 sm:p-8 p-1 flex-col ">
                         <div class="logo flex justify-center">
                             <img src="logos/SAG_KLIPS-Logo_Jan21.png" alt="KLIPS Logo" class="max-w-[80%]">
@@ -300,20 +306,23 @@
 
 <script>
     if ("ontouchstart" in document.documentElement) {
-        // Remove hover-active class and add click-active class on touch devices
-        document.querySelectorAll('.hover-active').forEach(function (element) {
-            element.classList.remove('hover-active');
-            element.classList.add('click-active');
+    // Remove hover-active class and add click-active class on touch devices
+    document.querySelectorAll('.hover-active').forEach(function (element) {
+        element.classList.remove('hover-active');
 
-            element.addEventListener('click', function () {
-                // Toggle the click-active class on click
-                if (element.classList.contains('click-active')) {
+        element.addEventListener('click', function () {
+            // Toggle the click-active class on click
+            if (element.classList.contains('click-active')) {
+                element.classList.remove('click-active');
+            } else {
+                element.classList.add('click-active');
+                // Set a timeout to remove the click-active class after 10 seconds
+                setTimeout(function () {
                     element.classList.remove('click-active');
-                } else {
-                    element.classList.add('click-active');
-                }
-            });
+                }, 10000); // 10000 milliseconds = 10 seconds
+            }
         });
+    });
     }
 
 </script>
